[package]
name = "discord-pfp-worker"
version = "0.1.1"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
path = "worker/lib.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.59"
worker = "0.1.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
